crates/doodle-core/tests/snapshots/diag_render__crlf_line_ending_is_stripped_from_the_snippet.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_diagnostic(&d, &view(\"crlf.doodle\", source))"
---
error[chained-comparison]: comparison operators don't chain
  --> crlf.doodle:2:7
2 |   if (a < b < c) then
  |       ^^^^^^^^^
